syntax = "proto3";
option java_multiple_files = true;
option java_package = "proto";
option go_package = "nameserver/proto";

message PaginationRequest {
    uint32 page = 1;
    uint32 page_size = 2;
}

message PaginationResponse {
    uint32 page = 1;
    uint32 page_size = 2;
    uint64 total_count = 3;
}